# CHIP-8-Emulator-Interpreter

./: README.md
Chip-8 Emulator/: .clang-format  CMakeLists.txt  README.md
Chip-8 Emulator/.github/workflows/: ci.yml
Chip-8 Emulator/cmake/: Unity.cmake
Chip-8 Emulator/core/: CMakeLists.txt  chip8.c  chip8.h  chip8_state.h  opcodes.c  opcodes.h
Chip-8 Emulator/src/: CMakeLists.txt  main.c  platform_sdl.c  platform_sdl.h
Chip-8 Emulator/tests/: CMakeLists.txt  test_sample.c
